fixed stretching of images

--- a/styles/formatting.css
+++ b/styles/formatting.css
@@ -429,4 +429,7 @@ header{
 }
 #soothe, #tenoneten {
 	height: 118px;
+	display: block;
+	margin: auto;
+	width: auto;
 }
